# smash

./: .dockerignore  .gitignore  .gitmodules  API_DOCS.md  CMakeLists.txt  LOCAL_RUN.md  README.md  compile_commands.json  docker-compose.yml  lll.py  main.py  metadata.json  openapi.yaml  package-lock.json  rout.py  s.py  test.sh  testing.py  vite.config.ts  voice.py
.cache/clangd/index/: TinySHA1.hpp.14D7C1F6E0F80EDE.idx  ansicolor_sink-inl.h.B5BE8DBAA067374D.idx  ansicolor_sink.h.651BFA8D4B7C59D2.idx  app.h.3FD9734295B2EB8C.idx  async.cpp.4CE8095F2577A920.idx  async.h.3B84A8B5412C5438.idx  async_logger-inl.h.82D31B35D7B6277A.idx  async_logger.h.5F79689B6AED5380.idx  backtracer-inl.h.6560CF662125BC27.idx  backtracer.h.8D0F1C01FD2CC452.idx  base.h.B17F54889DFC6CBD.idx  base_sink-inl.h.1C94EE55796E614A.idx  base_sink.h.AA14D361B2A82F3D.idx  basic_file_sink-inl.h.EFE2F844E0620D2F.idx  basic_file_sink.h.3F63A331CA1B684D.idx  bundled_fmtlib_format.cpp.537A7C4E009D3FDE.idx  cfg.cpp.195DE544CECF5213.idx  ci_map.h.32B64B0156BB9769.idx  circular_q.h.81F97DC30EAD3105.idx  color_sinks.cpp.DA12F2819AA0E4D6.idx  common-inl.h.6D745A2DA302DCE5.idx  common.h.1D02EA215C15C46A.idx  common.h.2BCFBDE546641BB5.idx  compression.h.A10FD49E2744B172.idx  config_manager.cpp.B1FE81643FAA2FC0.idx  config_manager.hpp.7510B64C6CAF1124.idx  console_globals.h.A59DE31D2325DB4C.idx  database.cpp.F8456269A30AAE4C.idx  database.hpp.7D0F65EBA8929D27.idx  exceptions.h.62A3507F4F9E04BE.idx  file_helper-inl.h.703861B6E0053A06.idx  file_helper.h.2E1FF4D7E922F672.idx  file_sinks.cpp.FA9B132B8C03594E.idx  fmt.h.EFB9A81C56E6F909.idx  fmt_helper.h.ECBF39548E35ECA0.idx  format-inl.h.BF73CD96009E1FF4.idx  format.h.421D38A00FCC5848.idx  formatter.h.252039ECFB112326.idx  helpers-inl.h.DF922BE15AFBD0D6.idx  helpers.h.9134B1DC0D650592.idx  (+57 more)
backend/: index.js  package-lock.json  package.json
backend/routes/: auth.js  devices.js
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Card.jsx  NavBtn.jsx  ProfileModal.jsx
frontend/src/layout/: Layout.jsx  Sidebar.jsx
frontend/src/pages/: Dashboard.jsx  Devices.jsx  Login.jsx
frontend/src/utils/: api.js  styles.js  theme.js
src/: api_router.cpp  api_router.hpp  cli.cpp  cli.hpp  config_manager.cpp  config_manager.hpp  database.cpp  database.hpp  logger.hpp  main.cpp  main.tsx
src/api/: axios.ts  endpoints.ts
src/components/: ColorPickerWithInput.tsx  EspConnector.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/modals/: DeviceDetailsModal.tsx  RoomDetailsDrawer.tsx  ScenarioEditModal.tsx  SecurityModal.tsx
src/pages/: Dashboard.tsx  Devices.tsx  Rooms.tsx  ScenariosBuilder.tsx
src/store/: useAppStore.ts
src/theme/: ThemeProvider.tsx
web_ui/: 1  package-lock.json  package.json
web_ui/src/: App.tsx  index.css
(+12 files in other folders)
